fixed mouse cursor overflowing past the main container

--- a/src/sections/Hero/Hero.module.css
+++ b/src/sections/Hero/Hero.module.css
@@ -23,8 +23,8 @@
 }
 
 .blur {
-  height: 100%;
-  width: 100%;
+  height: 110%;
+  width: 110%;
   position: absolute;
   backdrop-filter: blur(12vmax);
   left: 0px;
